--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       referrerpolicy="no-referrer"
     />
 
-    <title>Mechanical Ecommerce</title>
+    <title>Murang'a Seals</title>
   </head>
   <body>
     <div id="root"></div>
